css/main.css
/* ... */
/*
 * Removes inner padding and search cancel button in Safari 5 and Chrome
 * on OS X.
 */
input[type="search"]::-webkit-search-cancel-button, input[type="search"]::-webkit-search-decoration { -webkit-appearance: none; }

/*
 * Removes inner padding and border in Firefox 3+.
 */
button::-moz-focus-inner, input::-moz-focus-inner {
	border: 0;
	padding: 0;
}

/*
 * 1. Removes default vertical scrollbar in IE 6/7/8/9.
 * 2. Improves readability and alignment in all browsers.
 */
textarea {
	overflow: auto; /* 1 */
	vertical-align: top; /* 2 */
}

/* ==========================================================================
   Tables
   ========================================================================== */

/*
 * Remove most spacing between table cells.
 */
table { border-collapse: collapse; border-spacing: 0; }
html, button, input, select, textarea { color: #222; }
body { font-size: 1em; line-height: 1.4; }

/*
 * Remove text-shadow in selection highlight: h5bp.com/i
 * These selection declarations have to be separate.
 * Customize the background color to match your design.
 */
::-moz-selection { background: #b3d4fc; text-shadow: none; }
::selection { background: #b3d4fc; text-shadow: none; }

/*
 * A better looking default horizontal rule
 */
hr { display: block; height: 1px; border: 0; border-top: 1px solid #ccc; margin: 1em 0; padding: 0; }

/*
 * Remove the gap between images and the bottom of their containers: h5bp.com/i/440
 */
img { vertical-align: middle; }

/*
 * Remove default fieldset styles.
 */
fieldset { border: 0; margin: 0; padding: 0; }

/*
 * Allow only vertical resizing of textareas.
 */
textarea { resize: vertical; }

/* ==========================================================================
   Chrome Frame prompt
   ========================================================================== */
.chromeframe { margin: 0.2em 0; background: #ccc; color: #000; padding: 0.2em 0; }




/* ==========================================================================
   Author's custom styles
   ========================================================================== */


* {
  -webkit-box-sizing: border-box;
	 -moz-box-sizing: border-box;
		  box-sizing: border-box;
}

body {
	font-family: helvetica, verdana;
	font-size: 14px;
	width: 80%;
	margin: 0 auto;
	position: relative;
}

section {
	background: #f7f7f7;
	border: 1px solid #ccc;
	color: #000;
	display: inline-block;
	position: relative;
	padding: 0.5em 1em;
	margin: 1em 0;
	width: 98%;
}

a, a:visited {
	color: #6199DF;
	text-decoration: none;
}
a:hover {
	color: #4B30B9;
}

a img, img { border: 0; }

img { vertical-align: text-top; }

code {
	background: #fff;
	box-shadow: 0 0 5px 0 hsla(200, 0%, 80%, 0.6);
	padding: 0 5px;
}

h1, h2, h3 { margin: 0; }

h1 { display: inline-block; }

h2 { border-bottom: 1px solid #CCC; }

h2 .docs {
	color: #999;
	font-family: arial;
	font-size: 18px;
	font-weight: normal;
	display: none;
	padding: 0 5px;
}

h2:hover .docs { display: inline-block; }

ul li ul { list-style: none; }

header { width: 100%; }

header h1 a {
	color: #6199DF;
	text-decoration: none;
}
footer {
	display: block;
	width: 100%;
	text-align: center;
}

.links {
	display: inline-block;
	width: 100%;
	padding: 0 20px;
}

#themes .links { padding-top: 10px; }

.links li {
	float: left;
	width: 30%;
	margin: 0 0 0 1.9em;
}

#themes .links { margin: 0; }

table {
	border: 1px solid #bbb;
	border-spacing: 0;
	border-collapse: collapse;
	margin: 0 0 1.5em;
	width: 100%;
}
table th {
	background-color: #6199DF;
	border: 1px solid #4D90FE;
	color: #fff;
	font-weight: bold;
}
table td {
	border: 1px solid #BBB;
	vertical-align: top;
	padding: 6px 10px;
}

/* Network Panel */

#network .netCols {
	font-size: 12px;
	margin: 0;
	padding: 0;
}
#network .netCols li {
	width: 300px;
	display: inline-block;
	position: relative;
	margin: 0.7em;
}

#network .netCols.timeline li { width: 330px; }

#network .netCols li img {
	float: left;
	margin-right: 15px;
}

#network .netCols li .details {
	position: relative;
	top: 40px;
	float: left;
}

#network .timeline {
	position: relative;
	left: 16%;
}

#network p span { display: inline-block; }

.black { color: #000; }
.gray { color: #666; }

.share {
	display: inline-block;
	margin-left: 10px;
	position: absolute;
	right: 20px;
	top: 10px;
}

.fb-like { width: 40px; }

.git-btn {
	display: inline-block;
	position: relative;
	vertical-align: middle;
	margin: 0 0 0 20px;
}

.log-patterns {
	margin: 10px;
	padding: 4px 5px 4px 100px;
}


/* GLYPH ICONS GUIDE */

.glyph {
	-webkit-mask-image: url(imgs/statusbarButtonGlyphs.png);
	-webkit-mask-size: 320px 72px;
}

#pause-exceptions { background-position: 0 0; }
#record { background-position: 0 0; }

.glyph.toggled-on {
	background-color: rgb(66, 129, 235);
}
.glyph.toggled-on.exceptions {
	background-color: rgb(66, 129, 235);
}
.glyph.toggled-on.uncaught-exceptions {
	background-color: purple;
}
.glyph.toggled-on.recording {
	-webkit-mask-position: -288px -24px;
	background-color: rgb(216, 0, 0) !important;
}

/* Icons */



/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Image replacement
 */
.ir {
	background-color: transparent; border: 0; overflow: hidden;
	*text-indent: -9999px; /* IE 6/7 fallback */
}
.ir:before { content: ""; display: block; width: 0; height: 100%; }

/*
 * Hide from both screenreaders and browsers: h5bp.com/u
 */
.hidden { display: none !important; visibility: hidden; }

/*
 * Hide only visually, but have it available for screenreaders: h5bp.com/v
 */
.visuallyhidden {
	border: 0;
	clip: rect(0 0 0 0);
	position: absolute;
	height: 1px;
	margin: -1px;
	padding: 0;
	width: 1px;
	overflow: hidden;
}
/* ... */

